--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,20 @@ h4{
 	box-shadow: 0 14px 30px -15px rgba(0,0,0,.75);
 }
 
+/* section-logo */
+
+.section-logo {
+  background: #4b2d7f;
+}
+
+.section-logo .container:first-child {
+  margin-bottom: 80px;
+}
+
+.section-logo .container .col-md-2:nth-child(3) {
+  width: 180px;
+}
+
 /* section-reviews */
 
 .section-reviews {
@@ -283,7 +297,7 @@ h4{
   padding: 0;
 }
 
-.section-reviews .col-xl-5 {
+.section-reviews .col-lg-5 {
   margin-top: 50px;
 }
 
@@ -291,13 +305,130 @@ h4{
   margin-top: 30px;
 }
 
+.section-reviews blockquote .mx-5 {
+  font-style: italic;
+  font-weight: 500;
+}
+
 .section-reviews-img-stars {
   margin-top: 70px;
   margin-bottom: 20px;
 }
 
-.section-reviews .col-xl-4 {
+.section-reviews .col-lg-4 {
   margin-top: 20px;
+}
+
+/* section-form */
+
+.section-form{
+	background: url(../img/form_bg.jpg) center no-repeat;
+	background-size: cover;
+	color: #fff;
+}
+
+.section-form h5{
+	font-size: 30px;
+	font-weight: 600;
+	margin-bottom: 20px;
+}
+
+.section-form .row .row{
+	margin-top: 50px;
+}
+
+.section-form .form-control{
+	height: 51px;
+	background-color: rgba(255,255,255,.35);
+	color: #fff;
+	border: 0;
+	padding-left: 40px;
+	padding-right: 40px;
+	margin-bottom: 20px;
+}
+
+.section-form .form-control::placeholder{
+	color: #fff;
+}
+
+.section-form .form-control:focus{
+	box-shadow: 0 0 0 .2rem rgba(255,255,255,.25);
+}
+
+.section-form .btn-violet{
+	background-color: #4b2d7f;
+}
+
+.btn-violet.btn-shadow{
+	box-shadow: 0 7px 0px #a57ee9;
+}
+
+.btn-violet.btn-shadow:hover{
+	background: #3a2362;
+	box-shadow: 0 5px 0px #a57ee9;
+}
+
+/* footer  */
+
+.footer{
+	background: url(../img/world_map.png) center no-repeat;
+	background-size: cover;
+	padding: 100px 0;
+	font-family: 'Poppins', sans-serif;
+}
+
+.footer h5{
+	font-size: 25px;
+	color: #4b2d7f;
+	font-weight: 700;
+}
+
+.footer ul{
+	list-style: none;
+	padding-left: 10px;
+}
+
+.footer ul li a{
+	font-size: 15px;
+	font-weight: 600;
+	color: #171717;
+}
+
+.footer-images img{
+	margin-bottom: 20px;
+	border-radius: 15px;
+}
+
+/* copyright */
+
+.copyright{
+	background-color: #f6f6f6;
+	padding: 50px 0;
+	font-family: 'Poppins', sans-serif;
+}
+
+.copyright a,
+.copyright span{
+	color: #171717;
+	font-size: 18px;
+	font-weight: 600;
+	position: relative;
+}
+
+.copyright a:hover{
+	text-decoration: underline;
+}
+
+.copyright li a::after,
+.copyright li span::after{
+	content: '\00B7';
+	position: absolute;
+	right: -3px;
+}
+
+.copyright li:last-child a::after,
+.copyright li:last-child span::after{
+	content: '';
 }
 
 /* Media */
@@ -323,6 +454,15 @@ h4{
   .section-design-video-container {
     margin-left: 0;
   }
+
+  section,
+	.footer{
+		padding: 50px 0;
+	}
+
+	.copyright{
+		padding: 25px 0;
+	}
 }
 
 @media only screen and (max-width : 991px) {
@@ -351,6 +491,14 @@ h4{
     .section-design-video {
         height: 250px;
     }
+
+    .section-logo .container .col-md-2 {
+      margin-bottom: 40px;
+    }
+
+    .section-logo .container .col-md-2:last-child {
+      margin-bottom: 0;
+    }
 }
 
 @media only screen and (max-width : 600px) {
@@ -369,6 +517,10 @@ h4{
 		box-shadow: 0 5px 0 #ff5990;
 		padding: 10px 15px;
 	}
+  .copyright li a::after,
+  .copyright li span::after {
+    content: '';
+}
 }
 
 @media only screen and (max-width : 480px) {
