--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,31 @@ h4{
 	margin-bottom: 20px;
 }
 
+.scrollToTop{
+	position: fixed;
+	bottom: 60px;
+	right: 50px;
+	border-radius: 4px;
+	display: none;
+	font-size: 32px;
+	height: 50px;
+	width: 50px;
+	z-index: 1001;
+	color: #fff;
+	transition: all .5s;
+	background-color: #da1757;
+	border: 0;
+	cursor: pointer;
+}
+
+.scrollToTop:hover{
+	background-color: #fff;
+	text-decoration: none;
+	outline: none;
+	color: #da1757;
+	border: 1px solid #da1757;
+}
+
 /* header */
 
 .main-header{
@@ -120,7 +145,7 @@ h4{
 	background-color: #69328e;
 }
 
-/* section watch  */
+/* section watch */
 
 .section-tabs{
 	background: url(../img/world_map.png) center no-repeat;
@@ -431,6 +456,127 @@ h4{
 	content: '';
 }
 
+/* section-content */
+
+.section-content{
+	padding: 40px 0;
+}
+
+.article-preview{
+	border: 1px solid #ccc;
+	padding: 20px;
+	transition: all .5s;
+	margin-bottom: 30px;
+}
+
+.article-preview:hover{
+	box-shadow: 0 14px 30px -15px rgba(0,0,0,.75);
+}
+
+.article-preview h2{
+	font-size: 20px;
+	margin-bottom: 0;
+	font-weight: 600;
+}
+
+.article-preview a{
+	color: #484848;
+	transition: all .5s;
+}
+
+.article-preview a:hover{
+	color: #f42267;
+	text-decoration: none;
+}
+
+.article-date{
+	color: #da1757;
+	font-size: 13px;
+	font-weight: 600;
+}
+
+.thumb{
+	border: 5px solid #fff;
+	box-shadow: 0 0 10px rgba(0,0,0,.1);
+	margin: 0 20px 20px 0;
+	float: left;
+}
+
+.article-preview .more{
+	color: #da1757;
+}
+
+.article-preview .more:hover{
+	text-decoration: underline;
+}
+
+/* pagination */
+
+.page-link{
+	color: #da1757;
+	transition: all .5s;
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+
+.page-link:hover{
+	background-color: #da1757;
+	color: #fff;
+	border-color: #f42267;
+}
+
+.page-item.active .page-link{
+	background-color: #da1757;
+	border-color: #da1757;
+}
+
+/* sidebar-widget */
+
+.widget-categories ul{
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+
+.widget-categories ul li::before{
+	content: '\f138';
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;
+	color: #da1757;
+	font-size: 14px;
+}
+
+.widget-categories ul li a{
+	padding-left: 10px;
+	font-size: 14px;
+	color: #2f2f2f;
+	margin-bottom: 10px;
+	display: inline-block;
+	transition: all .5s;
+}
+
+.widget-categories ul li a:hover{
+	color: #da1757;
+}
+
+.widget-title{
+	color: #484848;
+	font-size: 20px;
+	font-weight: 600;
+	margin-bottom: 25px;
+	position: relative;
+}
+
+.widget-title::after{
+	content: "";
+	height: 2px;
+	position: absolute;
+	left: 0;
+	top: 30px;
+	width: 30px;
+	background-color: #da1757;
+}
+
 /* Media */
 
 @media (max-width: 1440px) {
@@ -466,7 +612,7 @@ h4{
 }
 
 @media only screen and (max-width : 991px) {
-	.navbar-nav{
+	.main-header .navbar-nav{
 		background: linear-gradient(45deg, #ed1b33 0%,#442e82 100%);
 		position: relative;
 		z-index: 1;
@@ -536,8 +682,13 @@ h4{
   }
 
   .section-design-video-container{
-  margin-top: 45px;
-}
+    margin-top: 45px;
+  }
+
+  .thumb{
+		float: none;
+		width: 100%;
+	}
 }
 
 @media only screen and (max-width : 380px) {
